# epcc

./: .clang-format  .gitignore  CMakeLists.txt  Makefile  benchmarkSetup.c  benchmarkSetup.h  collective_alltoall.c  collective_barrier.c  collective_scatterGather.c  input_file  mixedModeBenchmarkDriver.c  output.c  output.h  parallelEnvironment.c  parallelEnvironment.h  pt_to_pt_multiPingping.c  pt_to_pt_multiPingping.h  pt_to_pt_multiPingpong.c  pt_to_pt_pingping.c  pt_to_pt_pingping.h  pt_to_pt_pingpong.c  pt_to_pt_pingpong.h
src/: benchmarkSetup.c  collective_alltoall.c  collective_alltoall.h  collective_barrier.h  collective_broadcast.c  collective_broadcast.h  collective_reduction.c  collective_reduction.h  collective_scatterGather.h  parallelEnvironment.c  parallelEnvironment.h  pt_to_pt_haloexchange.c  pt_to_pt_haloexchange.h  pt_to_pt_multiPingpong.h
